fixed a bug on mobile where color didn't change back on collapsing an open entry

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -229,4 +229,13 @@ form label{
         margin-left: auto;
         margin-right: 0px;
     }
+
+    .entry{
+        background-color: #333 ;
+    }
+
+    /* fixes undiscovered bug on mobile where entryhead would not change color on collapse entryView.js line 33 */
+    .expanded-entry .entry-head{
+        background-color: #222;
+    }
 }
